# gistit

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  package-lock.json  package.json  release.yml
.github/workflows/: release.yml  rust.yml
app/: .eslintrc.json  jest.config.js  package.json  tailwind.config.js  tsconfig.test.json
app/src/__test__/: Example.test.ts
app/src/common/: ColorMode.tsx  index.ts
app/src/components/: Docs.tsx  Footer.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  Snippet.tsx  index.ts
app/src/hooks/: index.ts
app/src/pages/: _app.tsx  index.tsx
app/src/pages/gist/: [id].tsx
app/src/styles/: globals.css
cli/: .gitignore  Cargo.toml  README.md  build.rs
cli/src/: cli.rs  clipboard.rs  dispatch.rs  encrypt.rs  errors.rs  fetch.rs  file.rs  lib.rs  main.rs  network.rs  params.rs  send.rs  settings.rs  test.rs
cli/src/send/: addons.rs  file.rs
core/: .gitignore  Cargo.toml  build.rs
core/daemon/: Cargo.toml
core/daemon/src/: args.rs  clap.rs  errors.rs  main.rs  network.rs
core/src/: clipboard.rs  encrypt.rs  errors.rs  ipc.rs  lib.rs  network.rs
gistit/: Cargo.toml
gistit-cli/: Cargo.toml  README.md  build.rs
gistit-cli/src/: args.rs  clipboard.rs  dispatch.rs  error.rs  errors.rs  fetch.rs  file.rs  fmt.rs  github.rs  hash.rs  host.rs  lib.rs  main.rs  node.rs  param.rs  params.rs  payload.rs  project.rs  send.rs  server.rs  settings.rs  stdin.rs
gistit-cli/src/patch/: webbrowser.rs
gistit-daemon/: Cargo.toml  README.md
gistit-daemon/src/: args.rs  behaviour.rs  config.rs  error.rs  errors.rs  event.rs  main.rs  network.rs  node.rs
gistit-ipc/: Cargo.toml  README.md
gistit-ipc/src/: error.rs  lib.rs
gistit-project/: Cargo.toml  README.md
gistit-project/src/: lib.rs
gistit-proto/: Cargo.toml  README.md  build.rs
gistit-proto/src/: gistit.proto  ipc.proto  lib.rs  payload.proto  server.proto
gistit-reference/: Cargo.toml
gistit-reference/src/: def.rs  dir.rs  hash.rs  lib.rs  project.rs
lib-gistit/: Cargo.toml
lib-gistit/src/: clipboard.rs  encrypt.rs  errors.rs  file.rs  ipc.rs  lib.rs
peer-id-generator/: Cargo.toml
peer-id-generator/src/: main.rs
server/: .gitignore  example.json  firebase.json  package-lock.json  package.json
server/functions/: package-lock.json  package.json  tsconfig.json
server/functions/src/: auth.ts  defs.json  gistit.ts  index.ts  reserved.ts
services/: .firebaserc  .gitignore  example.json  firebase.json  firestore.rules  package-lock.json  package.json  schema.json
services/functions/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
services/functions/src/: checks.ts  defs.json  index.ts  rscrypt.ts
web/: .eslintrc.json  .prettierrc.js  jest.config.js  next.config.js  package.json
web/public/: clipboard.webm  payload.json
web/src/__test__/: Example.test.ts
web/src/components/: Docs.tsx  Footer.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  Snippet.tsx  Spinner.tsx  index.ts
web/src/hooks/: ColorMode.tsx  index.ts
web/src/pages/: auth.tsx  index.tsx
web/src/pages/h/: [hash].tsx
web/src/styles/: coldark-cold.ts  coldark-dark.ts  globals.css  spinner.css
