[package]
authors = ["Fabricio <fabricio7p@protonmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Quick and easy code snippet sharing tool"
edition = "2021"
keywords = ["code", "snippets", "share", "hash"]
license = "MIT"
name = "gistit"
readme = "README.md"
repository = "https://github.com/fabricio7p/gistit"
version = "0.1.4"

[[bin]]
name = "gistit"
path = "src/bin/gistit/main.rs"

[lib]
name = "lib_gistit"
path = "src/lib.rs"

[features]
default = ["application"]
# The cli application.
application = ["fetch", "clipboard", "clap", "clap_generate", "host"]
# Enables auto hash to clipboard feature
clipboard = ["which"]
# Enables gistit-fetch subcommand, preview in the terminal, and open in web
# browser
fetch = ["bat", "dialoguer", "webbrowser"]
# Enables p2p sharing
host = ["libp2p", "daemonize", "windows-service", "libc", "notify"]

[dependencies]
async-trait = "0.1.51"
lazy_static = "1.4.0"
phf = { version = "0.10", features = ["macros"] }
ngrammatic = "0.3.2"
rust-crypto = "0.2.36"
rand = "0.8.4"
console = "0.15.0"
url = "2.2.2"
reqwest = { version = "0.11.8", features = ["json"] }
serde = "1.0.117"
serde_json = "1.0.59"
serde_yaml = "0.8.21"
base64 = "0.13.0"
directories = "4.0.1"
aes-gcm = "0.9.4"
once_cell = "1.8.0"
webbrowser = { version = "0.5.5", optional = true }
names = { version = "0.12.0", default-features = false }
which = { version = "4.2.2", optional = true }
libc = { version = "0.2.112", optional = true }
notify = { version = "4.0.17", optional = true }

[target.'cfg(unix)'.dependencies]
daemonize = { version = "0.4.1", optional = true }

[target.'cfg(windows)'.dependencies]
windows-service = { version = "0.4.0", optional = true }

[dev-dependencies]
assert_fs = "1.0.6"
assert_cmd = "2.0.2"
predicates = "2.1.0"

[build-dependencies]
clap_generate = { version = "3.0.0-rc.8", optional = true }
clap = { version = "3.0.0-rc.7", optional = true, features = ["cargo"] }

[dependencies.libp2p]
version = "0.41.0"
optional = true
default-features = false
features = ["noise", "kad", "identify", "mdns", "mplex", "tcp-async-io", "dns-async-std", "websocket", "yamux", "request-response"]

[dependencies.clap]
version = "3.0.0-rc.8"
optional = true
features = ["cargo"]

[dependencies.dialoguer]
version = "0.9.0"
default-features = false
optional = true
features = ["password"]

[dependencies.bat]
version = "0.18.3"
optional = true
default-features = false
features = ["atty", "regex-onig", "paging"]

[target.'cfg(windows)'.dependencies.console]
version = "0.15.0"
features = ["windows-console-colors"]

[dependencies.tokio]
features = ["macros", "fs", "rt", "rt-multi-thread", "sync", "io-util"]
version = "1.15.0"

[profile.release]
lto = true
codegen-units = 1
# Might be a necessity in the future
# opt-level = "z"
# panic = "abort"
# strip = true
