[package]
authors = ["Fabricio <fabricio7p@protonmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Quick and easy code snippet sharing tool"
edition = "2021"
keywords = ["code", "snippets", "share", "hash"]
license = "MIT OR Apache-2.0"
name = "gistit-cli"
readme = "README.md"
repository = "https://github.com/fabricio7p/gistit"
version = "0.1.4"

[dependencies]
async-trait = "0.1.52"
lazy_static = "1.4.0"
ngrammatic = "0.3.4"
console = "0.15.0"
url = "2.2.2"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
base64 = "0.13.0"
directories = "4.0.1"
once_cell = "1.9.0"
webbrowser = "0.5.5"
names = { version = "0.12.0", default-features = false }
lib-gistit = { path = "../lib-gistit/"}
md5 = "0.7.0"

[dev-dependencies]
assert_fs = "1.0.7"
assert_cmd = "2.0.4"
predicates = "2.1.1"

[build-dependencies]
clap_complete = { version = "3.0.5", optional = true }
clap = { version = "3.0.13", optional = true, features = ["cargo"] }

[dependencies.clap]
version = "3.0.13"
features = ["cargo"]

[dependencies.bat]
version = "0.19.0"
default-features = false
features = ["atty", "regex-onig", "paging"]

[target.'cfg(windows)'.dependencies.console]
version = "0.15.0"
features = ["windows-console-colors"]

[dependencies.tokio]
features = ["macros", "fs", "rt", "rt-multi-thread", "sync", "io-util"]
version = "1.16.0"

[profile.release]
lto = true
# codegen-units = 1
# opt-level = "z"
# panic = "abort"
# strip = true
