[package]
authors = ["Fabricio <fabricio7p@protonmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Cli tool for gistit"
edition = "2021"
keywords = ["gistit"]
license = "MIT OR Apache-2.0"
name = "gistit-cli"
readme = "README.md"
repository = "https://github.com/fabricio7p/gistit"
version = "0.1.0"

[[bin]]
path = "src/bin/gistit/main.rs"
name = "gistit-cli"

[lib]
path = "src/lib.rs"
name = "libgistit"

[dependencies]
async-trait = "0.1.52"
lazy_static = "1.4.0"
ngrammatic = "0.3.5"
console = "0.15.0"
indicatif = "0.16.2"
url = "2.2.2"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
names = { version = "0.12.0", default-features = false }
which = "4.2.4"
rand = "0.8.5"
phf = { version = "0.10.1", features = ["macros"] }
thiserror = "1.0.30"
base64 = "0.13.0"
gistit-ipc = { version = "0.2.0", path = "../gistit-ipc" }
gistit-project = { version = "0.1.0", path = "../gistit-project" }
gistit-proto = { version = "0.1.0", path = "../gistit-proto" }

[build-dependencies]
clap_complete = { version = "3.1.0" }
clap = { version = "3.1.0", features = ["cargo"] }
names = { version = "0.12.0", default-features = false }

[dependencies.clap]
version = "3.1.0"
features = ["cargo"]

[dependencies.bat]
version = "0.19.0"
default-features = false
features = ["atty", "regex-onig", "paging"]

[target.'cfg(windows)'.dependencies.console]
version = "0.15.0"
features = ["windows-console-colors"]

[dependencies.tokio]
features = ["macros", "fs", "rt", "rt-multi-thread", "sync", "io-util"]
version = "1.17.0"

[dev-dependencies]
assert_fs = "1.0.7"
assert_cmd = "2.0.4"
predicates = "2.1.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
# strip = true # cargo 1.59.0 only
# panic = "abort"
