[package]
authors = ["Fabricio <fabricio7p@protonmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Gistit daemon used for p2p file sharing"
edition = "2021"
keywords = ["code", "snippets", "share", "hash"]
license = "MIT or Apache-2.0"
name = "gistit-daemon"
repository = "https://github.com/fabricio7p/gistit"
version = "0.1.0"

[dependencies]
async-trait = "0.1.52"
log = "0.4.14"
either = "1.6.1"
void = "1.0.2"
env_logger = { version = "0.9.0", default-features = false, features = ["termcolor", "atty", "humantime"] }

[dependencies.clap]
version = "3.0.13"
features = ["cargo"]

[dependencies.tokio]
features = ["macros", "fs", "rt", "rt-multi-thread", "sync", "io-util"]
version = "1.16.1"

[dependencies.libp2p]
git = "https://github.com/libp2p/rust-libp2p"
branch = "master"
default-features = false
features = ["noise", "kad", "identify", "mplex", "tcp-async-io", "dns-async-std", "yamux", "request-response", "ping", "relay", "autonat", "websocket"]

