[package]
name = "gistit-daemon"
authors = ["Fabricio <fabricio7p@protonmail.com>"]
description = "Gistit daemon used for p2p file sharing"
categories = ["command-line-utilities", "text-processing"]
keywords = ["gistit"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fabricio7p/gistit"
readme = "./README.md"
version = "0.1.0"

[dependencies]
async-trait = "0.1.52"
log = "0.4.14"
either = "1.6.1"
void = "1.0.2"
env_logger = { version = "0.9.0", default-features = false, features = ["termcolor", "atty", "humantime"] }
thiserror = "1.0.30"
gistit-ipc = { version = "0.1.1", path = "../gistit-ipc" }
gistit-reference = { version = "0.1.0", path = "../gistit-reference" }
argh = "0.1.7"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
zeroize = "1.5.2"
base64 = "0.13.0"

[dependencies.tokio]
features = ["macros", "fs", "rt", "rt-multi-thread", "sync", "io-util"]
version = "1.16.1"

[dependencies.libp2p]
version = "0.42.2"
default-features = false
features = ["noise", "kad", "identify", "mplex", "dns-tokio", "tcp-tokio", "yamux", "request-response", "relay", "autonat", "websocket", "ping"]

