[package]
name = "gistit-ipc"
authors = ["Fabricio <fabricio7p@protonmail.com>"]
keywords = ["gistit"]
categories = ["command-line-utilities", "text-processing"]
description = "Inter process communication for gistit-cli and gistit-daemon"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fabricio7p/gistit"
readme = "./README.md"
version = "0.1.2"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
log = "0.4.14"
tokio = { version = "1.16.1", default-features = false, features = ["net", "rt", "macros"] }

[dev-dependencies]
assert_fs = "1.0.7"
