[package]
name = "gistit-ipc"
authors = ["Fabricio <fabricio7p@protonmail.com>"]
keywords = ["gistit"]
categories = ["command-line-utilities", "text-processing"]
description = "Inter process communication for gistit-cli and gistit-daemon"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fabricio7p/gistit"
readme = "./README.md"
version = "0.2.0"

[dependencies]
log = "0.4.14"
tokio = { version = "1.17.0", default-features = false, features = ["net", "rt", "macros"] }
gistit-proto = { version = "0.1.0", path = "../gistit-proto" }
thiserror = "1.0.30"

[dev-dependencies]
assert_fs = "1.0.7"
