[package]
authors = ["Fabricio <fabricio7p@protonmail.com>"]
description = "Gistit protocol buffer definitions"
categories = ["command-line-utilities", "text-processing"]
keywords = ["gistit"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "gistit-proto"
readme = "README.md"
repository = "https://github.com/fabricio7p/gistit"
version = "0.1.2"
build = "./build.rs"

[dependencies]
base64 = "0.13.0"
sha2 = "0.10.2"
prost = "0.9.0"
bytes = "1.1.0"
thiserror = "1.0.30"

[build-dependencies]
prost-build = "0.9.0"
