[package]
authors = ["Fabricio <fabricio7p@protonmail.com>"]
description = "Gistit reference crate for project and data definitions"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "gistit-reference"
readme = "README.md"
repository = "https://github.com/fabricio7p/gistit"
version = "0.1.0"

[dependencies]
directories = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
