[package]
authors = ["Fabricio <fabricio7p@protonmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Gistit library"
edition = "2021"
keywords = ["code", "snippets", "share", "hash"]
license = "MIT OR Apache-2.0"
name = "lib-gistit"
readme = "README.md"
repository = "https://github.com/fabricio7p/gistit"
version = "0.1.0"
publish = false

[features]
default = []
encryption = ["aes-gcm", "rust-crypto"]

[dependencies]
async-trait = "0.1.52"
console = "0.15.0"
serde = { version = "1.0.133", features = ["derive"] }
base64 = "0.13.0"
phf = { version = "0.10.1", features = ["macros"] }
which = "4.2.2"
bincode = "1.3.3"
rand = "0.8.4"
aes-gcm = { version= "0.9.4", optional = true }
rust-crypto = { version = "0.2.36", optional = true }

[dependencies.tokio]
features = ["macros", "fs", "rt", "rt-multi-thread", "sync", "io-util", "net"]
version = "1.15.0"

[dev-dependencies]
assert_fs = "1.0.7"
assert_cmd = "2.0.4"
predicates = "2.1.1"
